RESOLVED FIXED258780
pointerevent_movementxy.html?mouse WPT is failing
https://bugs.webkit.org/show_bug.cgi?id=258780
Summary pointerevent_movementxy.html?mouse WPT is failing
Abrar Rahman Protyasha
Reported 2023-07-02 01:29:10 PDT
Specifically, the failure reads "FAIL mouse pointerevent attributes assert_equals: movementX should be 0 for event other than pointermove. expected 0 but got 20" i.e. We should make sure that only pointermove events have non-zero movementX/movementY values.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-02 01:29:20 PDT
Abrar Rahman Protyasha
Comment 2 2023-07-02 01:58:54 PDT
EWS
Comment 3 2023-07-03 12:11:43 PDT
Committed 265730@main (dd9d402d27a3): <https://commits.webkit.org/265730@main> Reviewed commits have been landed. Closing PR #15486 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.